# crank-nicolson-gpu

./: .gitignore  CMakeLists.txt  Makefile  README.md  test1_intel.txt  test2_intel.txt
config_examples/: dot_config.json  test1_config.json
data/input/: dot.pgm  validation.pgm
experiments_config/: dot_config.json  test1_config.json  test2_config.json
scripts/: run.py  utils.py
src/: flags.h  main.c
src/config/: config.c  config.h
src/conjugate_gradient/: conjugate_gradient.c  conjugate_gradient.h  kernels.cl  obm.h  ocl_boiler.h
src/crank_nicolson/: crank_nicolson.c  crank_nicolson.h
src/pgm_utils/: #pgm_utils.c#  pgm_utils.c  pgm_utils.h
src/profiler/: profiler.c  profiler.h
